# CSLP_Encoder

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  generate_graphs.ipynb  para_colegas.txt  pyproject.toml
docs/html/: BitStream_8cpp.html  BitStream_8cpp__incl.map  BitStream_8cpp__incl.md5  BitStream_8cpp_source.html  BitStream_8hpp.html  BitStream_8hpp__dep__incl.map  BitStream_8hpp__dep__incl.md5  BitStream_8hpp__incl.map  BitStream_8hpp__incl.md5  BitStream_8hpp_source.html  Encoder_8hpp.html  Encoder_8hpp__dep__incl.map  Encoder_8hpp__dep__incl.md5  Encoder_8hpp__incl.map  Encoder_8hpp__incl.md5  Encoder_8hpp_source.html  Frame_8cpp.html  Frame_8cpp__incl.map  Frame_8cpp__incl.md5  Frame_8cpp_source.html  Frame_8hpp.html  Frame_8hpp__dep__incl.map  Frame_8hpp__dep__incl.md5  Frame_8hpp__incl.map  Frame_8hpp__incl.md5  Frame_8hpp_source.html  Golomb_8cpp.html  Golomb_8cpp__incl.map  Golomb_8cpp__incl.md5  Golomb_8cpp_source.html  Golomb_8hpp.html  Golomb_8hpp__dep__incl.map  Golomb_8hpp__dep__incl.md5  Golomb_8hpp__incl.map  Golomb_8hpp__incl.md5  Golomb_8hpp_source.html  Header_8cpp.html  Header_8cpp__incl.map  Header_8cpp__incl.md5  Header_8cpp_source.html  (+283 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+46 more)
docs/report/: CSLP_G6.pptx  drafts.md
graphs/: test_results.csv  test_results1.csv
profiling/: README.md
src/: CMakeLists.txt  Histogram.cpp  Image.cpp  Image.h  Image.hpp  image.cpp  image.hpp  imageProcessing.cpp  imageProcessing.hpp  video.cpp  video.hpp  videoPlayer.cpp
src/cli/: CMakeLists.txt  CSLPEncoder.cpp
src/codec/: CMakeLists.txt  Encoder.cpp  Encoder.hpp  Frame.cpp  Frame.hpp  Header.cpp  Header.hpp  LosslessInter.cpp  LosslessInter.hpp  LosslessIntra.cpp  LosslessIntra.hpp  Quantizer.cpp  Quantizer.hpp
src/codec/encoders/: DCTEncoder.cpp  DCTEncoder.hpp  LosslessHybrid.cpp  LosslessHybrid.hpp  LosslessInter.cpp  LosslessInter.hpp  LosslessIntra.cpp  LosslessIntra.hpp  LossyHybrid.cpp  LossyHybrid.hpp  LossyInter.cpp  LossyInter.hpp  LossyIntra.cpp  LossyIntra.hpp  RLEEncoder.cpp  RLEEncoder.hpp
src/codec/encoders/lossless/: LosslessHybrid.cpp  LosslessHybrid.hpp  LosslessInter.cpp  LosslessInter.hpp  LosslessIntra.cpp  LosslessIntra.hpp
src/codec/encoders/lossy/: DCTEncoder.cpp  DCTEncoder.hpp  LossyHybrid.cpp  LossyHybrid.hpp  LossyIntra.cpp  LossyIntra.hpp
src/io/: BitStream.cpp  BitStream.hpp  CMakeLists.txt  Golomb.cpp  Golomb.hpp
src/visual/: CMakeLists.txt  Image.cpp  Image.hpp  ImageProcessing.cpp  ImageProcessing.hpp  Video.cpp  Video.hpp  YuvHeader.hpp  YuvParser.cpp  YuvParser.hpp  YuvWriter.cpp  YuvWriter.hpp  imageProcessing.cpp  imageProcessing.hpp  video.cpp  video.hpp
tests/: CMakeLists.txt  EncoderDemos.cpp  EncoderTest.cpp  FrameDemos.cpp  FrameTest.cpp  IOTest.cpp  ImageDemos.cpp  ImageEffectsTest.cpp  ImageProcTest.cpp  ImageTest.cpp  VideoDemos.cpp  VideoTest.cpp
